Fixed title spacing

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body>header h4 {
 	font-family: 'IM Fell DW Pica';
 	color: #252525;
 	text-align: center;
-	margin-top: -15px;
+	margin-top: 0;
 }
 
 body>header h1 hr {
